--- a/data/index.html
+++ b/data/index.html
@@ -28,7 +28,7 @@
 
     h2 {
       margin-bottom: 1.5rem;
-      color: #cc0044;
+      color: #0e00cc;
       font-weight: 700;
       font-size: 1.8rem;
     }
